feat: add is_active field to product images, products, and categories; update related queries and services for soft delete functionality